# applied_ai

./: DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  najma  najma.pub  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 20240129_000001_initial_schema.py
scripts/: entrypoint.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_happy_flow.py  test_scenarios.py  test_workflow_scenarios.py
tests/unit/: __init__.py  test_dag.py  test_models.py  test_state_machine.py  test_template.py
workflow_engine/: __init__.py
workflow_engine/api/: __init__.py  app.py  routes.py
workflow_engine/config/: __init__.py  settings.py
workflow_engine/core/: __init__.py  dag.py  models.py  state_machine.py
workflow_engine/messaging/: __init__.py  broker.py  consumer.py
workflow_engine/orchestrator/: __init__.py  coordinator.py  engine.py
workflow_engine/storage/: __init__.py
workflow_engine/storage/postgres/: __init__.py  database.py  models.py  repository.py
workflow_engine/storage/redis/: __init__.py  cache.py  connection.py
workflow_engine/template/: __init__.py  resolver.py
workflow_engine/workers/: __init__.py  base.py  handlers.py  unified.py
